// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Global Thread Footer Should render for channel view and unfollow the thread on press 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "minHeight": 40,
    }
  }
>
  <Connect(Avatars)
    style={
      Object {
        "marginRight": 12,
        "paddingVertical": 8,
      }
    }
    userIds={
      Array [
        "user2",
      ]
    }
  />
  <View
    style={
      Object {
        "marginRight": 5,
        "top": -1,
      }
    }
  >
    <CompassIcon
      color="rgba(63,67,80,0.64)"
      name="reply-outline"
      size={18}
    />
  </View>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "color": "rgba(63,67,80,0.64)",
        "fontSize": 12,
        "fontWeight": "600",
        "marginRight": 12,
      }
    }
    testID="thread_footer.footer.reply_count"
  >
    2 replies
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(28,88,217,0.08)",
        "borderRadius": 4,
        "height": 32,
        "justifyContent": "center",
        "paddingHorizontal": 12,
      }
    }
    testID="thread_footer.footer.following"
  >
    <Text
      style={
        Object {
          "color": "#1c58d9",
          "fontSize": 12,
          "fontWeight": "600",
        }
      }
    >
      Following
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Global Thread Footer Should render for global threads view 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "minHeight": 40,
    }
  }
>
  <Connect(Avatars)
    style={
      Object {
        "marginRight": 12,
        "paddingVertical": 8,
      }
    }
    userIds={
      Array [
        "user1",
        "user2",
      ]
    }
  />
  <Text
    style={
      Object {
        "alignSelf": "center",
        "color": "#5d89ea",
        "fontSize": 12,
        "fontWeight": "600",
        "marginRight": 12,
      }
    }
    testID="thread_footer.footer.unread_replies"
  >
    2 new replies
  </Text>
</View>
`;
